# EmuForge

./: .gitignore  Cargo.toml  NEW_GUID_CODE.txt  README.md  build.sh  gui_working_config.json  test_extract.rs  test_guid_check.sh  test_guid_quick.rs  test_guid_ryujinx.rs  working_gui_config.json
core/: Cargo.toml
core/examples/: ryujinx_config_fix.rs  test_forge.rs  test_guid_gen.rs
core/scripts/: extract_pup_fixed.py
core/src/: downloader.rs  lib.rs
core/src/appimage/: mod.rs  patcher.rs
core/src/assets/: cemu_controller_keyboard.xml  cemu_controller_sdl.xml  keys.txt
core/src/crypto/: mod.rs  sce.rs
core/src/detection/: analyzer.rs  mod.rs
core/src/firmware/: mod.rs  ps3.rs
core/src/forge/: builder.rs  config.rs  mod.rs
core/src/plugin/: azahar.rs  cemu.rs  dolphin.rs  duckstation.rs  flycast.rs  lime3ds.rs  manager.rs  melonds.rs  mod.rs  pcsx2.rs  ppsspp.rs  redream.rs  rpcs3.rs  ryujinx.rs  ryujinx.rs.bak_guid  xemu.rs
core/tests/: plugin_test.rs
scripts/: create_icon.js  create_icon.py  install_deps.sh  setup_linux.sh  setup_windows.ps1
stub/: Cargo.toml  build.rs  default_config.json
stub/src/: main.rs  ryujinx_input.rs
templates/duckstation/: settings.ini
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
