[workspace]
members = ["core", "stub", "ui/src-tauri"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Slower compile, smaller binary
strip = true        # Strip symbols
panic = "abort"     # No unwinding
