[package]
name = "emuforge-stub"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Slower compile, smaller binary
strip = true        # Strip symbols
panic = "abort"     # No unwinding
